--- a/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
+++ b/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
@@ -81,7 +81,7 @@
             android:id="@+id/OrderPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:text="Order Price"
             android:textSize="18dp"
             android:textColor="@color/black"
@@ -95,7 +95,7 @@
             android:text="0"
             android:textSize="18dp"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="50dp"
             android:textAlignment="center"
             android:textColor="@color/black"
             />
@@ -103,12 +103,13 @@
         <TextView
             android:id="@+id/curentPrice"
             android:layout_below="@id/OrderPrice"
+            android:layout_toRightOf="@id/Price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$"
             android:textSize="18dp"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="10dp"
             android:textAlignment="center"
             android:textColor="@color/black"
             />
@@ -118,7 +119,7 @@
             android:layout_toRightOf="@id/OrderPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="130dp"
             android:text="Ouantity"
             android:textSize="18dp"
             android:textColor="@color/black"
@@ -129,9 +130,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_below="@id/quantityPrice"
-            android:layout_marginStart="130dp"
+            android:layout_marginStart="90dp"
             android:layout_marginTop="0dp"
-            android:layout_toRightOf="@id/curentPrice"
+            android:layout_toRightOf="@id/OrderPrice"
             android:text="-"
             android:onClick="minusQuantity"
             tools:ignore="UsingOnClickInXml" />
