Module 2 - Commite 2.5 - Create switch for IMG

--- a/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
+++ b/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content" />
 
     <ImageView
-        android:id="@+id/image_Item"
+        android:id="@+id/productImg"
         android:layout_width="300dp"
         android:layout_height="220dp"
         android:scaleType="centerCrop"
