Module 2 - Commite 2.7 -Create class Order

--- a/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
+++ b/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+ <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,7 +11,7 @@
 
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/userNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -156,12 +156,14 @@
             android:text="+" />
 
         <Button
-            android:id="@+id/addTcard"
+            android:id="@+id/addTocard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:text="Add to card"
-            android:textAllCaps="false" />
+            android:textAllCaps="false"
+            android:onClick="createOrder"
+            tools:ignore="UsingOnClickInXml" />
     </RelativeLayout>
 
 
