--- a/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
+++ b/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
@@ -1,4 +1,4 @@
- <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,8 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Input name"
-        android:inputType="textPersonName" />
+        android:hint="@string/input_name"
+        android:inputType="textPersonName"
+        android:autofillHints="" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -28,7 +29,8 @@
             android:layout_height="120dp"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/sale"
-            tools:srcCompat="@drawable/sale" />
+            tools:srcCompat="@drawable/sale"
+            android:contentDescription="@string/todo1" />
 
         />
     </RelativeLayout>
@@ -38,11 +40,11 @@
         android:id="@+id/text_Items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingRight="20dp"
-        android:text="Select Item"
+        android:paddingEnd="20dp"
+        android:text="@string/select_item"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
-        android:textSize="18dp" />
+        android:textSize="18sp" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -55,7 +57,8 @@
         android:layout_height="220dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/notebook" />
+        app:srcCompat="@drawable/notebook"
+        android:contentDescription="@string/todo" />
 
 
     <TextView
@@ -63,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:padding="8dp"
-        android:text="Other text"
+        android:text="@string/other_text"
         android:textAlignment="inherit"
         android:textColor="@color/black"
         android:textIsSelectable="false"
@@ -80,9 +83,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="Order Price"
+            android:text="@string/order_price"
             android:textColor="@color/black"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/Price"
@@ -94,7 +97,7 @@
             android:text="0"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/curentPrice"
@@ -103,21 +106,21 @@
             android:layout_below="@id/OrderPrice"
             android:layout_marginStart="10dp"
             android:layout_marginTop="8dp"
-            android:layout_toRightOf="@id/Price"
+            android:layout_toEndOf="@id/Price"
             android:text="$"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/quantityPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="130dp"
-            android:layout_toRightOf="@id/OrderPrice"
-            android:text="Ouantity"
+            android:layout_toEndOf="@id/OrderPrice"
+            android:text="@string/ouantity"
             android:textColor="@color/black"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/minus_button"
@@ -126,7 +129,7 @@
             android:layout_below="@id/quantityPrice"
             android:layout_marginStart="90dp"
             android:layout_marginTop="0dp"
-            android:layout_toRightOf="@id/OrderPrice"
+            android:layout_toEndOf="@id/OrderPrice"
             android:onClick="minusQuantity"
             android:text="-"
             tools:ignore="UsingOnClickInXml" />
@@ -138,11 +141,11 @@
             android:layout_below="@id/quantityPrice"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
-            android:layout_toRightOf="@id/minus_button"
+            android:layout_toEndOf="@id/minus_button"
             android:text="0"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/minus_plus"
@@ -150,18 +153,19 @@
             android:layout_height="50dp"
             android:layout_below="@id/quantityPrice"
             android:layout_marginStart="30dp"
-            android:layout_toRightOf="@id/num_quantity"
+            android:layout_toEndOf="@id/num_quantity"
             android:onClick="plusQuantity"
 
-            android:text="+" />
+            android:text="+"
+            tools:ignore="UsingOnClickInXml" />
 
         <Button
             android:id="@+id/addTocard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:text="Add to card"
-            android:textAllCaps="false"
+            android:text="@string/order"
+            android:textAllCaps="true"
             android:onClick="createOrder"
             tools:ignore="UsingOnClickInXml" />
     </RelativeLayout>
