--- a/AndroidDev_part2/src/main/res/layout/activity_order.xml
+++ b/AndroidDev_part2/src/main/res/layout/activity_order.xml
@@ -12,6 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:textSize="20sp" />
+        android:layout_centerVertical="true"
+        android:layout_marginTop="15dp"
+        android:textSize="30sp"
+        android:textColor="#0022FF"
+        />
 </RelativeLayout>
