Module 2 - Commite 2.12 -  Add event to TextView

--- a/AndroidDev_part2/src/main/res/layout/activity_order.xml
+++ b/AndroidDev_part2/src/main/res/layout/activity_order.xml
@@ -13,16 +13,16 @@
       android:layout_height="300dp"
       android:layout_centerVertical="true"
       android:layout_centerHorizontal="true"
-      >
+      tools:ignore="UselessParent">
 
       <TextView
           android:id="@+id/UserName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginLeft="10dp"
+          android:layout_marginStart="10dp"
           android:layout_marginTop="10dp"
           android:fontFamily="@font/benchnine_light"
-          android:text="User:"
+          android:text="@string/user"
           android:textColor="#3E3E3E"
           android:textSize="14sp" />
 
@@ -30,21 +30,21 @@
         android:id="@+id/receivedUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/UserName"
-        android:layout_marginLeft="102dp"
+        android:layout_toEndOf="@id/UserName"
+        android:layout_marginStart="102dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="=text"
+        android:text="@string/text"
         android:textColor="#737375"
         android:textSize="14sp" />
     <TextView
         android:id="@+id/productName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="Product:"
+        android:text="@string/product"
         android:textColor="#737375"
         android:textSize="14sp" />
 
@@ -52,11 +52,11 @@
         android:id="@+id/receivedproductName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/productName"
-        android:layout_marginLeft="90dp"
+        android:layout_toEndOf="@id/productName"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="=text"
+        android:text="@string/text1"
         android:textColor="#737375"
         android:textSize="14sp" />
 
@@ -64,10 +64,10 @@
         android:id="@+id/quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="Quantity:"
+        android:text="@string/quantity"
         android:textColor="#737375"
         android:textSize="14sp" />
 
@@ -75,11 +75,11 @@
         android:id="@+id/receivedQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/quantity"
-        android:layout_marginLeft="87dp"
+        android:layout_toEndOf="@id/quantity"
+        android:layout_marginStart="87dp"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="=text"
+        android:text="@string/text3"
         android:textColor="#737375"
         android:textSize="14sp" />
 
@@ -87,10 +87,10 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="70dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="Price:"
+        android:text="@string/price"
         android:textColor="#737375"
         android:textSize="14sp" />
 
@@ -98,11 +98,11 @@
         android:id="@+id/receivedPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/quantity"
-        android:layout_marginLeft="87dp"
+        android:layout_toEndOf="@id/quantity"
+        android:layout_marginStart="87dp"
         android:layout_marginTop="70dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="=text"
+        android:text="@string/text4"
         android:textColor="#737375"
         android:textSize="14sp" />
 
@@ -110,25 +110,23 @@
         android:id="@+id/orderPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="110dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="Total price:"
+        android:text="@string/total_price"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:textStyle="bold"
-
-        />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/receivedOrderPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/quantity"
-        android:layout_marginLeft="86dp"
+        android:layout_toEndOf="@id/quantity"
+        android:layout_marginStart="86dp"
         android:layout_marginTop="110dp"
         android:fontFamily="@font/benchnine_light"
-        android:text="=text"
+        android:text="@string/text5"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -141,13 +139,9 @@
           android:layout_marginTop="20dp"
           android:layout_centerHorizontal="true"
           android:layout_below="@id/receivedOrderPrice"
-          app:srcCompat="@drawable/QR" />
+          app:srcCompat="@drawable/photo_qr"
+          android:contentDescription="@string/todo2" />
 
 
   </RelativeLayout>
-
-
-
-
-
 </RelativeLayout>
