--- a/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
+++ b/AndroidDev_part2/src/main/res/layout/activity_main_part2.xml
@@ -31,6 +31,8 @@
             app:srcCompat="@drawable/sale"
             tools:srcCompat="@drawable/sale"
             android:contentDescription="@string/todo1" />
+
+
     </RelativeLayout>
 
 
@@ -72,7 +74,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
 
 
         <TextView
@@ -166,17 +169,6 @@
             android:onClick="createOrder"
             tools:ignore="UsingOnClickInXml" />
     </RelativeLayout>
-
-    <Button
-        android:id="@+id/addTocard"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="@string/order"
-        android:textAllCaps="true"
-        android:onClick="createOrder"
-        tools:ignore="DuplicateIds,UsingOnClickInXml" />
 
 
 </LinearLayout>
