--- a/AndroidDev_part3/src/main/res/layout/activity_video.xml
+++ b/AndroidDev_part3/src/main/res/layout/activity_video.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".video">
+    tools:context=".Video">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textViewVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="@string/video_activity"
+        tools:layout_editor_absoluteX="177dp"
+        android:textSize="26sp"
+        android:textColor="@color/black"
+        tools:layout_editor_absoluteY="40dp" />
+
+</RelativeLayout>
