--- a/AndroidDev_part3/src/main/res/layout/animation.xml
+++ b/AndroidDev_part3/src/main/res/layout/animation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,30 +8,39 @@
     tools:context=".Animation">
 
 
+    <TextView
+        android:id="@+id/textViewAnimation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="Video activity"
+        tools:layout_editor_absoluteX="177dp"
+        android:textSize="26sp"
+        android:textColor="@color/black"
+        tools:layout_editor_absoluteY="40dp" />
+
     <ImageView
         android:id="@+id/virgilImageView1"
         android:onClick="hideVirgil"
         android:layout_width="200dp"
         android:layout_height="600dp"
         android:layout_marginTop="112dp"
-        android:layout_marginEnd="100dp"
+        android:layout_centerHorizontal="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/vergil_dmc5" />
 
     <ImageView
         android:id="@+id/danteImageView1"
-        android:alpha="1"
         android:scaleX="0"
         android:scaleY="0"
+        android:layout_marginTop="112dp"
         android:layout_width="200dp"
         android:layout_height="600dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/dmc_dante" />
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
