--- a/AndroidDev_part3/src/main/res/layout/activity_video.xml
+++ b/AndroidDev_part3/src/main/res/layout/activity_video.xml
@@ -8,16 +8,24 @@
     tools:context=".Video">
 
 
-    <TextView
-        android:id="@+id/textViewVideo"
-        android:layout_width="wrap_content"
+<!--    <TextView-->
+<!--        android:id="@+id/textViewVideo"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:text="@string/video_activity"-->
+<!--        tools:layout_editor_absoluteX="177dp"-->
+<!--        android:textSize="26sp"-->
+<!--        android:textColor="@color/black"-->
+<!--        tools:layout_editor_absoluteY="40dp" />-->
+
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="@string/video_activity"
-        tools:layout_editor_absoluteX="177dp"
-        android:textSize="26sp"
-        android:textColor="@color/black"
-        tools:layout_editor_absoluteY="40dp" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="-84dp"
+        android:layout_marginEnd="0dp" />
 
 </RelativeLayout>
