--- a/AndroidDev_part3/src/main/res/layout/activity_video.xml
+++ b/AndroidDev_part3/src/main/res/layout/activity_video.xml
@@ -8,24 +8,12 @@
     tools:context=".Video">
 
 
-<!--    <TextView-->
-<!--        android:id="@+id/textViewVideo"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginTop="50dp"-->
-<!--        android:text="@string/video_activity"-->
-<!--        tools:layout_editor_absoluteX="177dp"-->
-<!--        android:textSize="26sp"-->
-<!--        android:textColor="@color/black"-->
-<!--        tools:layout_editor_absoluteY="40dp" />-->
-
     <VideoView
         android:id="@+id/videoView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-84dp"
-        android:layout_marginEnd="0dp" />
-
+        android:layout_width="566dp"
+        android:layout_height="756dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </RelativeLayout>
